[gd_scene load_steps=5 format=3 uid="uid://c2ex0nwa2yslp"]

[ext_resource type="Script" path="res://hud/Pawn/nameplate.gd" id="1_1vwyn"]
[ext_resource type="Texture2D" uid="uid://0i518kyvybom" path="res://assets/textures/hud/sanity_bubble.png" id="1_a3cbs"]
[ext_resource type="PackedScene" uid="uid://35ocvdufqxas" path="res://hud/Pawn/hitpoint_bar.tscn" id="2_rwy8e"]
[ext_resource type="PackedScene" uid="uid://ddw1s4iadv7nc" path="res://hud/Pawn/status_effect_display.tscn" id="4_l8soc"]

[node name="Nameplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1vwyn")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 404.0
offset_bottom = 81.0

[node name="SanityBubble" type="TextureRect" parent="Background"]
self_modulate = Color(0.0509804, 0.521569, 0.686275, 1)
layout_mode = 0
offset_left = 356.0
offset_top = -25.0
offset_right = 484.0
offset_bottom = 103.0
texture = ExtResource("1_a3cbs")

[node name="SanityValue" type="RichTextLabel" parent="Background/SanityBubble"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]100"
fit_content = true
scroll_active = false

[node name="HitpointBar" parent="Background" instance=ExtResource("2_rwy8e")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.68
anchor_right = 0.449
anchor_bottom = 0.77
offset_left = 0.112
offset_top = -14.08
offset_right = 339.604
offset_bottom = 6.63
grow_vertical = 2

[node name="Name" type="RichTextLabel" parent="Background"]
layout_mode = 0
offset_left = 10.0
offset_right = 346.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "NAME HERE"

[node name="StatusEffectDisplay" parent="." instance=ExtResource("4_l8soc")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -169.0
offset_top = 77.0
offset_right = 147.0
offset_bottom = 171.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(2.5, 2.5)
